test/conformance/chainsaw/mutate/clusterpolicy/standard/existing/validation/auth-check/cpol-namespace-variable/01-fail-no-permission.yaml
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  creationTimestamp: null
  name: fail-no-permission
spec:
  timeouts: {}
  try:
  - apply:
      check:
        (error != null): true
      file: policy.yaml
